Use separate project for Spring