@@ -6,7 +6,7 @@ plugins {
 
 group = 'com.experimental'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+sourceCompatibility = '19'
 
 configurations {
 	compileOnly {
@@ -27,4 +27,12 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+tasks.withType(JavaCompile).each {
+	it.options.compilerArgs.add('--enable-preview')
+}
+
+test {
+	jvmArgs(['--enable-preview'])
 }
